Création de la page des utilisateurs. Modification de css

--- a/app/components/navbar/navbar.view.html
+++ b/app/components/navbar/navbar.view.html
@@ -15,7 +15,7 @@
             <li ng-class="{active: 2 == selected}"><a ng-href="#users" ng-click="selected = 2">Utilisateurs</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li ng-class="{active: 3 == selected}"><a ng-href="#myProfile" ng-click="selected = 3">Mon profil</a></li>
+            <li ng-class="{active: 3 == selected}"><a ng-href="#profile" ng-click="selected = 3">Mon profil</a></li>
         </ul>
     </div>
 </nav>
