--- a/assets/css/badge.css
+++ b/assets/css/badge.css
@@ -1,7 +1,7 @@
 .badge-container {
     text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .badge-glyphicon {
@@ -10,12 +10,14 @@
     -webkit-text-stroke-width: 4px;
     -webkit-text-stroke-color: #fff;
     right: 10px;
-    font-size: 6em;
+    font-size: 5em;
     color: green
 }
 
 .badge-img {
-    border: 5px solid dimgray;
+    max-height: 128px;
+    height:auto;
+    border: 5px solid gray;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -25,6 +27,11 @@
     -webkit-box-shadow: 7px 7px 5px 0px rgba(200, 200, 200, 0.75);
     -moz-box-shadow: 7px 7px 5px 0px rgba(200, 200, 200, 0.75);
     box-shadow: 7px 7px 5px 0px rgba(200, 200, 200, 0.75);
+}
+
+.badge-panel{
+    height:300px;
+    margin:0px
 }
 
 .badge-margin-top {
@@ -41,5 +48,5 @@
 
 .badge-title {
     margin-bottom: 0;
-    margin-top: 0px
+    margin-top: 10px
 }
