--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,14 @@
+html, body
+{
+    height: 100%;
+}
+
 .content{
     padding-top: 50px;
+}
+
+.truncate {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
