--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -4,18 +4,32 @@
 }
 
 .user-pic {
-    max-height: 100px;
-    height:auto;
-    border: 2px solid gray;
     display: block;
     margin-left: auto;
     margin-right: auto;
     border-radius: 500px;
+}
+
+.user-pic-sm{
+    max-height: 100px;
+    height:auto;
+    border: 2px solid black;
     -webkit-border-radius: 500px;
     -moz-border-radius: 500px;
     -webkit-box-shadow: 4px 4px 2px 0px rgba(200, 200, 200, 0.75);
     -moz-box-shadow: 4px 4px 2px 0px rgba(200, 200, 200, 0.75);
     box-shadow: 4px 4px 2px 0px rgba(200, 200, 200, 0.75);
+}
+
+.user-pic-lg{
+    max-height: 200px;
+    height:auto;
+    border: 2px solid black;
+    -webkit-border-radius: 500px;
+    -moz-border-radius: 500px;
+    -webkit-box-shadow: 7px 7px 5px 0px rgba(200, 200, 200, 0.75);
+    -moz-box-shadow: 7px 7px 5px 0px rgba(200, 200, 200, 0.75);
+    box-shadow: 7px 7px 5px 0px rgba(200, 200, 200, 0.75);
 }
 
 .user-panel{
