--- a/app/components/home/home.view.html
+++ b/app/components/home/home.view.html
@@ -1,12 +1,14 @@
 <div ng-controller="homeCtrl" class="padding">
     <row>
-        <div ng-show="!userId" class="panel panel-default col-sm-10 col-md-8 col-lg-6 col-centered padding" style="margin-bottom:15px">
+        <div ng-show="!userId" class="panel panel-default col-sm-10 col-md-8 col-lg-6 col-centered padding"
+             style="margin-bottom:15px">
             <ng-include src="'app/shared/authentication/authentication.view.html'"></ng-include>
         </div>
     </row>
     <row>
         <div class="panel panel-default col-sm-10 col-md-8 col-lg-6 col-centered padding">
-            <h1 style="margin-bottom: 20px; margin-top:5px">&Agrave; propos</h1>
+            <h1 style="margin-bottom: 20px; margin-top:5px">&Agrave; propos
+                <img src="assets/img/favicon.ico" style="position: absolute; right:15px"/></h1>
             <!-- TODO description -->
             <p>Et Epigonus quidem amictu tenus philosophus, ut apparuit, prece frustra temptata, sulcatis lateribus
                 mortisque metu admoto turpi confessione cogitatorum socium, quae nulla erant, fuisse firmavit cum nec
@@ -40,9 +42,9 @@
             <div style="display:flex">
                 <div ng-repeat="user in developers" style="flex:1">
                     <!-- image -->
-                    <img ng-show="user.profilePic" class="img-responsive img-circle user-pic user-pic-sm"
+                    <img ng-show="user.profilePic" class="img-responsive img-circle user-pic user-pic-sm center-block"
                          ng-src="{{user.profilePic}}"/>
-                    <img ng-show="!user.profilePic" class="img-responsive img-circle user-pic user-pic-sm"
+                    <img ng-show="!user.profilePic" class="img-responsive img-circle user-pic user-pic-sm center-block"
                          src="assets/img/user-default.png"/>
                     <!-- name -->
                     <h4 style="text-align:center">{{user.firstName}} {{user.lastName.toUpperCase()}}</h4>
