--- a/app/components/home/home.view.html
+++ b/app/components/home/home.view.html
@@ -1,6 +1,6 @@
 <div ng-controller="homeCtrl" class="padding">
-    <row>
-        <div ng-show="!userId" class="panel panel-default col-sm-10 col-md-8 col-lg-6 col-centered padding"
+    <row ng-show="!userId">
+        <div class="panel panel-default col-sm-10 col-md-8 col-lg-6 col-centered padding"
              style="margin-bottom:15px">
             <ng-include src="'app/shared/authentication/authentication.view.html'"></ng-include>
         </div>
