--- a/app/components/profile/profile.view.html
+++ b/app/components/profile/profile.view.html
@@ -11,6 +11,7 @@
         <div class="col-xs-12 col-sm-6">
             <!-- name -->
             <h1>{{user.firstName}} {{user.lastName}}</h1>
+            <h2 style="margin-top:10px; margin-bottom:20px">{{user.points}}pts</h2>
             <div class="btn-group">
                 <label class="btn btn-primary" ng-model="selected" uib-btn-radio="'completed'">D&eacute;fis r&eacute;ussis : {{challengesCompleted.length}}</label>
                 <label class="btn btn-primary" ng-model="selected" uib-btn-radio="'current'">D&eacute;fis en cours : {{currentChallenges.length}}</label>
