Encapsulation du service d'authentification et internalisation des images des développeurs

--- a/app/components/home/home.view.html
+++ b/app/components/home/home.view.html
@@ -1,5 +1,5 @@
 <div ng-controller="homeCtrl" class="padding">
-    <row ng-show="!userId">
+    <row ng-show="!isLoggedIn()">
         <div class="panel panel-default col-sm-10 col-md-8 col-lg-6 col-centered"
              style="margin-bottom:15px;border-style: dashed">
             <div class="row">
