--- a/app/components/challenges/challenges.view.html
+++ b/app/components/challenges/challenges.view.html
@@ -1,4 +1,4 @@
-
 <div ng-controller="challengesCtrl">
+    <!-- challenges -->
     <challenge ng-repeat="challenge in challenges" challenge="challenge"></challenge>
 </div>
