--- a/app/components/home/home.view.html
+++ b/app/components/home/home.view.html
@@ -1,16 +1,19 @@
 <div ng-controller="homeCtrl" class="padding">
+    <!-- connection or registration -->
     <row ng-show="!isLoggedIn()">
         <div class="panel panel-default col-sm-10 col-md-8 col-lg-6 col-centered"
              style="margin-bottom:15px;border-style: dashed">
             <div class="row">
+                <!-- connection -->
                 <div class="padding col-md-5">
                     <ng-include src="'app/shared/authentication/authentication.view.html'"></ng-include>
                 </div>
                 <div class="padding col-md-2">
-                <h4 style="text-align: center">
-                    OU
-                </h4>
-                    </div>
+                    <h4 style="text-align: center">
+                        OU
+                    </h4>
+                </div>
+                <!-- registration -->
                 <div class="padding col-md-5">
                     <ng-include src="'app/shared/registration/registration.view.html'"></ng-include>
                 </div>
@@ -18,6 +21,7 @@
         </div>
     </row>
     <row>
+        <!-- content -->
         <div class="panel panel-default col-sm-10 col-md-8 col-lg-6 col-centered padding">
             <h1 style="margin-bottom: 20px; margin-top:5px">&Agrave; propos
                 <img src="assets/img/favicon.ico" style="position: absolute; right:15px"/></h1>
@@ -51,6 +55,7 @@
 
             <h3 style="margin-bottom: 20px">D&eacute;veloppeurs</h3>
 
+            <!-- developers div -->
             <div style="display:flex">
                 <div ng-repeat="user in developers" style="flex:1">
                     <!-- image -->
