--- a/app/components/navbar/navbar.view.html
+++ b/app/components/navbar/navbar.view.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="navbarCtrl">
     <div class="navbar-header">
+        <!-- collapse button -->
         <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -10,13 +11,20 @@
     </div>
 
     <div class="collapse navbar-collapse" ng-class="!navCollapsed && 'in'">
+        <!-- left links -->
         <ul class="nav navbar-nav">
+            <!-- challenges -->
             <li ng-class="{active: 1 == selected}"><a ng-href="#challenges" ng-click="selected = 1; navCollapsed=true">D&eacutefis</a></li>
+            <!-- users -->
             <li ng-class="{active: 2 == selected}"><a ng-href="#users" ng-click="selected = 2; navCollapsed=true">Utilisateurs</a></li>
         </ul>
+        <!-- right links -->
         <ul class="nav navbar-nav navbar-right">
+            <!-- my profile -->
             <li ng-show="isLoggedIn()" ng-class="{active: 3 == selected}"><a ng-href="#profile/{{getUserId()}}" ng-click="selected = 3; navCollapsed=true">Mon profil</a></li>
+            <!-- log in -->
             <li ng-show="!isLoggedIn()" class="pointer-hover"><a ng-click="onAuthClick(); navCollapsed=true">Se connecter</a></li>
+            <!-- log out -->
             <li ng-show="isLoggedIn()" class="pointer-hover"><a ng-click="onDisconnectionClick(); navCollapsed=true">Se d&eacute;connecter</a></li>
         </ul>
     </div>
