Image par défaut des défis. Ajout de la modal de détails des défis. Modification de CSS

--- a/app/components/home/home.view.html
+++ b/app/components/home/home.view.html
@@ -1,7 +1,7 @@
 <div ng-controller="homeCtrl" class="padding">
     <!-- connection or registration -->
     <row ng-show="!isLoggedIn()">
-        <div class="panel panel-default col-sm-10 col-md-8 col-lg-6 col-centered"
+        <div class="panel panel-default col-sm-10 col-md-8 col-lg-6 block-centered"
              style="margin-bottom:15px;border-style: dashed">
             <div class="row">
                 <!-- connection -->
@@ -22,7 +22,7 @@
     </row>
     <row>
         <!-- content -->
-        <div class="panel panel-default col-sm-10 col-md-8 col-lg-6 col-centered padding">
+        <div class="panel panel-default col-sm-10 col-md-8 col-lg-6 block-centered padding">
             <h1 style="margin-bottom: 20px; margin-top:5px">&Agrave; propos
                 <img src="assets/img/favicon.ico" style="position: absolute; right:15px"/></h1>
             <!-- TODO description -->
