--- a/assets/css/badge.css
+++ b/assets/css/badge.css
@@ -15,6 +15,10 @@
     text-shadow: 0 0 5px black;
 }
 
+.badge-glyphicon-sm {
+    color: green;
+}
+
 .badge-img {
     max-height: 128px;
     height: auto;
@@ -28,7 +32,7 @@
 }
 
 .badge-panel {
-    height: 300px;
+    height: 280px;
     margin: 0px
 }
 
@@ -39,7 +43,7 @@
 .badge-title {
     font-weight: bold;
     margin-bottom: 0;
-    margin-top: 10px
+    margin-top: 40px;
 }
 
 .badge-bot-left {
@@ -63,6 +67,29 @@
 
 .badge-footer button{
     width:100%;
+    height:40px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+}
+
+.badge-panel .panel-body{
+     height:100%;
+ }
+
+.badge-panel:hover img{
+    opacity: 0.7;
+}
+
+.badge-progressbar:not(:last-child){
+    border-radius: 0;
+}
+
+.badge-progressbar:last-child{
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.badge-level-title{
+    font-weight:bold;
+    text-align:center
 }
