--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -11,6 +11,7 @@
 
 .user-pic-sm{
     max-height: 100px;
+    max-width: 100px;
     height:auto;
     border: 2px solid black;
     -webkit-box-shadow: 4px 4px 2px 0px rgba(200, 200, 200, 0.75);
@@ -20,6 +21,7 @@
 
 .user-pic-lg{
     max-height: 200px;
+    max-width: 200px;
     height:auto;
     border: 2px solid black;
     -webkit-box-shadow: 7px 7px 5px 0px rgba(200, 200, 200, 0.75);
