--- a/assets/css/badge.css
+++ b/assets/css/badge.css
@@ -32,6 +32,19 @@
     box-shadow: 5px 5px 3px 0px rgba(200, 200, 200, 0.75);
 }
 
+.level-img {
+    max-height: 86px;
+    max-width: 86px;
+    height: auto;
+    border: 5px solid skyblue;
+    border-radius: 500px;
+    -webkit-border-radius: 500px;
+    -moz-border-radius: 500px;
+    -webkit-box-shadow: 3px 3px 2px 0px rgba(200, 200, 200, 0.75);
+    -moz-box-shadow: 3px 3px 2px 0px rgba(200, 200, 200, 0.75);
+    box-shadow: 3px 3px 2px 0px rgba(200, 200, 200, 0.75);
+}
+
 .badge-panel {
     height: 280px;
     margin: 0px
@@ -93,4 +106,8 @@
 .badge-level-title{
     font-weight:bold;
     text-align:center
+}
+
+.condition-progressbar{
+    height:10px;
 }
