--- a/assets/css/badge.css
+++ b/assets/css/badge.css
@@ -22,7 +22,7 @@
 .badge-img {
     max-height: 128px;
     height: auto;
-    border: 5px solid skyblue;
+    border: 5px solid #337ab7;
     border-radius: 500px;
     -webkit-border-radius: 500px;
     -moz-border-radius: 500px;
@@ -34,7 +34,7 @@
 .level-img {
     max-height: 86px;
     height: auto;
-    border: 5px solid skyblue;
+    border: 5px solid #337ab7;
     border-radius: 500px;
     -webkit-border-radius: 500px;
     -moz-border-radius: 500px;
@@ -55,7 +55,7 @@
 .badge-title {
     font-weight: bold;
     margin-bottom: 0;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .badge-bot-left {
@@ -77,35 +77,40 @@
     right: 15px;
 }
 
-.badge-footer button{
-    width:100%;
-    height:40px;
+.badge-footer button {
+    width: 100%;
+    height: 40px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
 
-.badge-panel .panel-body{
-     height:100%;
- }
+.badge-panel .panel-body {
+    height: 100%;
+}
 
-.badge-panel:hover img{
+.badge-panel:hover img {
     opacity: 0.7;
 }
 
-.badge-progressbar:not(:last-child){
+.badge-progressbar:not(:last-child) {
     border-radius: 0;
 }
 
-.badge-progressbar:last-child{
+.badge-progressbar:last-child {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
 
-.badge-level-title{
-    font-weight:bold;
-    text-align:center
+.badge-level-title {
+    font-weight: bold;
+    text-align: center
 }
 
-.condition-progressbar{
-    height:10px;
+.condition-progressbar {
+    height: 10px;
+}
+
+.badge-label-points {
+    position: relative;
+    top: -25px
 }
