modification de la modal de détails. Autofocus sur la modal de connexion.

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,6 +6,10 @@ body{
     background-color:aliceblue;
 }
 
+/*.modal-body{
+    background-color:aliceblue;
+}*/
+
 .navbar {
     -webkit-box-shadow: 0 0px 5px 0px #999;
     -moz-box-shadow: 0 0px 5px 0px #999;
