--- a/app/components/challenges/challenges.view.html
+++ b/app/components/challenges/challenges.view.html
@@ -1,39 +1,7 @@
 <div ng-controller="challengesCtrl">
-    <div class="panel panel-default row margin" style="padding:5px; margin-bottom:0">
-        <div class="col-xs-6">
-            <!-- search field -->
-            <row class="navbar-form navbar-left" accept-charset="UTF-8" role="form" method="post"
-                 ng-submit="onSearch()" style="padding-left:0">
-                <div class="input-group">
-                    <span class="input-group-addon">
-            <i class="glyphicon glyphicon-search">
-            </i>
-          </span>
-                    <input type="text" class="form-control" ng-model="searchFor" placeholder="Rechercher...">
-                </div>
-            </row>
-        </div>
-        <div class="col-xs-6">
-            <!-- sort fields -->
-            <row class="navbar-form navbar-right">
-                <span>Trier par&nbsp;</span>
-                <!-- sort options -->
-                <div class="input-group">
-                    <select class="form-control" ng-model="sorting"
-                            ng-options="key for (key,value) in options"></select>
-                    <!-- ascending/descending -->
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" ng-click="reversed = !reversed">
-                            <span ng-show="!reversed" class="glyphicon glyphicon-arrow-up"></span>
-                            <span ng-show="reversed" class="glyphicon glyphicon-arrow-down"></span>
-                        </button>
-                    </div>
-                </div>
-            </row>
-        </div>
-    </div>
-
+    <!-- filter bar -->
+    <ng-include src="'app/shared/filterbar/filterbar.view.html'"></ng-include>
     <!-- challenges -->
-    <challenge ng-repeat="challenge in challenges | filter : searchFor | orderBy : sorting : reversed"
+    <challenge ng-repeat="challenge in challenges | filter : searchFor | orderBy : sortBy : reverseOrder"
                challenge="challenge"></challenge>
 </div>
