--- a/app/components/users/users.view.html
+++ b/app/components/users/users.view.html
@@ -1,4 +1,6 @@
 <div ng-controller="usersCtrl">
+    <!-- filter bar -->
+    <ng-include src="'app/shared/filterbar/filterbar.view.html'"></ng-include>
     <!-- users -->
-    <user ng-repeat="user in users" user="user"></user>
+    <user ng-repeat="user in users | filter : searchFor | orderBy : sortBy : reverseOrder" user="user"></user>
 </div>
