Centralisation du lien du serveur ($rootScope.serverURL). Renommage app.module.js --> app.mdl.js

--- a/app/components/home/home.view.html
+++ b/app/components/home/home.view.html
@@ -25,7 +25,7 @@
         <div class="panel panel-default col-sm-10 col-md-8 col-lg-6 block-centered padding justified">
             <h1 style="margin-bottom: 20px; margin-top:5px">&Agrave; propos
                 <img src="assets/img/favicon.ico" style="position: absolute; right:15px"/></h1>
-            <p>Ecoknowledge est un PFE (Projet de Fin d'Études) développé lors de la dernière
+            <p>Ecoknowledge est un PFE (Projet de Fin d'Études) développé lors de notre dernière
                 année du cursus d'ingénierie informatique à Polytech Nice-Sophia (2015-2016).</p>
 
             <p>Ce projet s'inscrit dans un contexte d'économie d'énergie au sein de
