--- a/app/components/navbar/navbar.view.html
+++ b/app/components/navbar/navbar.view.html
@@ -10,7 +10,7 @@
         <a class="navbar-brand" ng-href="#home" ng-click="selected = 0; navCollapsed=true">Ecoknowledge</a>
     </div>
 
-    <div class="collapse navbar-collapse" ng-class="!navCollapsed && 'in'">
+    <div class="collapse navbar-collapse" ng-animate-children ng-class="!navCollapsed && 'in'">
         <!-- left links -->
         <ul class="nav navbar-nav">
             <!-- challenges -->
