--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -16,6 +16,11 @@
     -webkit-box-shadow: 4px 4px 2px 0px rgba(200, 200, 200, 0.75);
     -moz-box-shadow: 4px 4px 2px 0px rgba(200, 200, 200, 0.75);
     box-shadow: 4px 4px 2px 0px rgba(200, 200, 200, 0.75);
+
+    -webkit-transition: opacity 0.25s ease-in-out;
+    -moz-transition: opacity 0.25s ease-in-out;
+    -o-transition: opacity 0.25s ease-in-out;
+    transition: opacity 0.25s ease-in-out;
 }
 
 .user-pic-lg{
@@ -36,7 +41,7 @@
 }
 
 .user-container a:hover img{
-    opacity: 0.7;
+    opacity: 0.5;
 }
 
 .user-padding {
