--- a/app/components/challenges/challenges.view.html
+++ b/app/components/challenges/challenges.view.html
@@ -3,5 +3,5 @@
     <ng-include src="'app/shared/filterbar/filterbar.view.html'"></ng-include>
     <!-- challenges -->
     <challenge ng-repeat="challenge in challenges | filter : searchFor | orderBy : sortBy : reverseOrder"
-               challenge="challenge"></challenge>
+               challenge="challenge" on-server-response="refresh()"></challenge>
 </div>
