El commit que no serve a granda cosa !

--- a/app/src/components/home/home.view.html
+++ b/app/src/components/home/home.view.html
@@ -35,6 +35,9 @@
                 efforts plus ludiques.
             </p>
 
+            <p>Vous pensez être de taille à relever nos défis ? Alors rejoignez-nous sans plus tarder !
+            </p>
+
             <h3 style="margin-bottom: 20px">Développeurs</h3>
 
             <!-- developers div -->
