--- a/app/assets/css/global.css
+++ b/app/assets/css/global.css
@@ -2,9 +2,9 @@ html, body {
     height: 100%;
 }
 
-body{
+/*body{
     background-color:aliceblue;
-}
+}*/
 
 /*.modal-body{
     background-color:aliceblue;
