--- a/app/src/components/navbar/navbar.view.html
+++ b/app/src/components/navbar/navbar.view.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="navbarCtrl">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="navbarCtrl">
     <div class="navbar-header">
         <!-- collapse button -->
         <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
