Change badge.css (green instead of blue)

--- a/app/assets/css/badge.css
+++ b/app/assets/css/badge.css
@@ -30,7 +30,7 @@
 .badge-img {
     max-height: 128px;
     height: auto;
-    border: 5px solid #337ab7;
+    border: 5px solid #87AA79;
     border-radius: 500px;
     -webkit-border-radius: 500px;
     -moz-border-radius: 500px;
@@ -47,7 +47,7 @@
 .level-img {
     max-height: 86px;
     height: auto;
-    border: 5px solid #337ab7;
+    border: 5px solid #87AA79;
     border-radius: 500px;
     -webkit-border-radius: 500px;
     -moz-border-radius: 500px;
